--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
-    <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="common.css" />
   </head>
   <body>
     
@@ -13,6 +13,6 @@
       <h1>Це стартова сторінака index.html. Все добре!</h1>
     </div>
       
-    <script src="./index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
