02 add css style for input and button 'Submit'

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,25 @@
     <link rel="stylesheet" href="common.css" />
   </head>
   <body>
-    
+  
+  <fieldset>
+    <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+    </form>
+  </fieldset>
+  <hr>
+
     <div class="gallery">
-      <h1>Це стартова сторінака index.html. Все добре!</h1>
+      <!-- <h3>тут потім буде галерея карток</h3> -->
     </div>
-      
+ 
+
     <script src="index.js" type="module"></script>
   </body>
 </html>
