adds a request to the server and generates a card gallery

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
-    <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="./common.css" />
   </head>
   <body>
   
@@ -20,7 +20,6 @@
         <button type="submit">Search</button>
     </form>
   </fieldset>
-  <hr>
 
     <div class="gallery">
       <!-- <h3>тут потім буде галерея карток</h3> -->
