adds the More button. It needs to be completed

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,9 @@
     <div class="gallery">
       <!-- <h3>тут потім буде галерея карток</h3> -->
     </div>
- 
 
+    <button type="button" class="btn-more">Learn More</button>
+ 
     <script src="./index.js" type="module"></script>
   </body>
 </html>
