adds all the logic with buttons

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,10 @@
     <div class="gallery">
       <!-- <h3>тут потім буде галерея карток</h3> -->
     </div>
-
-    <button type="button" class="btn-more">Learn More</button>
+    <div class="more-block">
+      <button type="button" class="load-more">Learn More</button>
+      <p class="notification-text visually-hidden">We're sorry, but you've reached the end of search results.</p>
+    </div>
  
     <script src="./index.js" type="module"></script>
   </body>
