--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
       <p class="notification-text visually-hidden">We're sorry, but you've reached the end of search results.</p>
     </div>
  
-    <script src="./index.js" type="module"></script>
+    <script src="./index.js" type="module">console.log('Все буде добре!')</script>
   </body>
 </html>
